adjusting default number of ticks; black background

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <style>
+        body {
+            background-color: black;
+        }
+        
         .example {
             font-family: Arial;
             font-size: 12px;
