using local wav file; adding script to run on node http server

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             tick: tick,
             complete: done,
             paper: paper,
-            audio: "https://github.com/wilson428/metronome/blob/master/tick.wav?raw=true"
+            audio: "tick.wav"
         });
 
         m.make_input("#inputs");
